--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Kovalchuk Dima",
   "main": "index.js",
   "scripts": {
+    "build": "webpack src/index.js dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
     "vue": "^2.4.2"
+  },
+  "devDependencies": {
+    "webpack": "^3.5.5"
   }
 }
